# rules_tibia

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  tibia_data.bzl  verify.py  verify_test.py
tools/: workspace_status.sh
